# rust-lambda-blog

./: .gitignore  README.md  samconfig.toml  template.yaml
events/: moistMsg.json  tempMsg.json  wrongTempMsg.json
rust_app/: Cargo.toml
rust_app/src/: main.rs  models.rs  service.rs
